[workspace]
members = [
    # apps
    "apps/editors",
    # "apps/launcher",
    "apps/manager",
    "apps/server",
    "apps/sniffer",
    # libs
    "libs/enc_dec",
    "libs/packets",
]

[workspace.package]
version = "0.0.3"
authors = ["Nelson Faiçal Rechdan"]
description = "W2.Rust is a set of tools and GameServer made using the Rust language."
documentation = "https://github.com/Rechdan/W2.Rust"
edition = "2021"
