[workspace]
members = [
    # apps
    "apps/editors",
    "apps/manager",
    "apps/server",
    "apps/sniffer",
    # libs
    "libs/enc_dec",
    "libs/packets",
]

resolver = "2"

[workspace.package]
version = "0.0.6"
description = "W2.Rust is a set of tools and GameServer made using the Rust language."
readme = "README.md"
repository = "https://github.com/Rechdan/W2.Rust"
license = "MIT"
documentation = "https://github.com/Rechdan/W2.Rust"
authors = ["Nelson Faiçal Rechdan"]
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
