[package]
name = "editors"
version.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
documentation.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
eframe = "0.21.3"
egui = "0.21.0"
egui_extras = "0.21.0"
once_cell = "1.17.1"
