[package]
name = "editors"
version.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
documentation.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
eframe = "0.26.2"
egui = "0.26.2"
egui_extras = "0.26.2"
encoding_rs = "0.8.33"
fixedstr = { version = "0.5.5", features = ["serde"] }
once_cell = "1.19.0"
rfd = "0.14.0"
