[package]
name = "manager"
version.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
documentation.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
eframe = "0.26.2"
egui = "0.26.2"
egui_extras = "0.26.2"
once_cell = "1.19.0"
tokio = { version = "1.36.0", features = ["full"] }
