[package]
name = "server"
version.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
documentation.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
enc_dec = { path = "../../libs/enc_dec" }
packets = { path = "../../libs/packets" }
tokio = { version = "1.35.1", features = ["full"] }
