[package]
name = "sniffer"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[package.metadata.bundle]
name = "Sniffer"

[dependencies]
enc_dec = { path = "../../libs/enc_dec" }
packets = { path = "../../libs/packets" }
eframe = "0.21.3"
egui = "0.21.0"
egui_extras = "0.21.0"
once_cell = "1.17.1"
tokio = { version = "1.28.0", features = ["full"] }
