[package]
name = "sniffer"
version.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
documentation.workspace = true
authors.workspace = true
edition.workspace = true

[package.metadata.bundle]
name = "Sniffer"

[dependencies]
enc_dec = { path = "../../libs/enc_dec" }
packets = { path = "../../libs/packets" }
eframe = "0.24.1"
egui = "0.24.1"
egui_extras = "0.24.2"
once_cell = "1.19.0"
tokio = { version = "1.35.1", features = ["full"] }
